[package]
name = "datapipes"
version = "0.1.0"
edition = "2021"
description = "Simple multi-threaded data pipelines"
repository = "https://github.com/sandeep-sandhu/datapipes"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
